# nvidia-cuda-tutorial

./: .gitignore  README.md  pyproject.toml
session-1/: test_mandel.ipynb
session-1/exercises/: cuda-ufuncs-and-memory-management.ipynb  guvectorize.ipynb  kernels.ipynb  vectorize.ipynb
session-3/: test_examples.ipynb
session-3/exercises/: 1-Porting.ipynb  2-Debug.ipynb
session-4/examples/: extending-the-cuda-target.ipynb
session-4/exercise/: Exercise.ipynb
session-5/exercises/: exercise.ipynb
