[tool.poetry]
name = "cuda-player"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
rich = "^12.5.1"
black = "^22.8.0"
isort = "^5.10.1"
jupyterlab = "^3.4.7"
jupyterlab-code-formatter = "^1.5.3"
jupyter-resource-usage = "^0.6.2"
polars = "^0.14.14"
numba = "^0.56.2"
matplotlib = "^3.6.0"
scipy = "^1.9.1"
cupy = "^11.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# [[tool.poetry.source]]
# name = "main-pypi"
# url = "..."
# default = true

# [[tool.poetry.source]]
# name = "2nd-pypi"
# url = "..."
# secondary = true
