[tool.poetry]
name = "cuda-env"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
rich = "^12.5.1"
black = "^22.8.0"
isort = "^5.10.1"
jupyterlab = "^3.4.7"
jupyterlab-code-formatter = "^1.5.3"
jupyter-resource-usage = "^0.6.2"
polars = "^0.14.14"
numba = "^0.56.2"
matplotlib = "^3.6.0"
scipy = "^1.9.1"
cupy = "^11.1.0"
pandas = "^1.5.0"
pyarrow = "^9.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "dxy-ali"
url = "https://nexus.k8s.qc.host.dxy/repository/pypi-aliyun/simple/"
default = true

[[tool.poetry.source]]
name = "dxy-pypi"
url = "https://pypiserver.k8s.qc.host.dxy/simple/"
secondary = true
